[tool.poetry]
name = "cookbook-ml"
version = "0.1.0"
description = ""
authors = ["yx <yangxue.cs@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
feature-engine = "^1.8.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
